test/parsing/errors/assign-to-map.boa
m: map[string] of string;
m["foo"] := "bar";
